[package]
name = "compress-into"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
console = "0.15.5"
indicatif = "0.17.3"
tokio = { version = "1.24.2", features = ["full"] }
zip = "0.6.3"
